# python2

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
logs/: masks.log.py  utils.log.py
src/: bank_utils.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  transactions.py  utils.py  widget.py
tests/: test_bank_utils.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_transactions.py  test_utils.py  test_widget.py
